# topas_tools

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENCE  atominfo.py  blender.py  blender_mini.py  bonds.txt  cif2patterson.py  cif2topas.py  environment.yml  expandcell.py  fh2topas.py  manifest.in  pyproject.toml  readme.md  restraints.out  restraints_statistics.py  setup.cfg  setup.py  stripcif.py  topas_ndxan.py  topas_restraints.py  topasdiff.py  topasdiff.sh
linux/: cif2patterson.sh  cif2topas.sh  expandcell.sh  make_superflip.sh  stripcif.sh  topasdiff.sh
osx/: cif2patterson.sh  cif2topas.sh  expandcell.sh  make_superflip.sh  stripcif.sh  topasdiff.sh
testing/: fobs.out  mfi.cif
topas_tools/: __init__.py  __main__.py  blender_mini.py  cif2patterson.py  cif2topas.py  expandcell.py  fh2topas.py  make_superflip.py  restraints_statistics.py  stripcif.py  topas_ndxan.py  topas_restraints.py  topasdiff.py  topasdiff_gui.py
topas_tools/cif/: __init__.py  builders.py  cod_tools.py  crystal_symmetry_from_cif.py  errors.py  geometry.py  model.py  restraints.py  validation.py
