[metadata]
author = Stef Smeets
author_email = s.smeets@esciencecenter.nl
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = Set of tools to aid structure refinement with TOPAS
keywords =
    powder-diffraction
    profile-refinement
    topas
    restraints
long_description = file: readme.md
long_description_content_type = text/markdown
name = topas_tools
project_urls =
    Bug Tracker = https://github.com/stefsmeets/topas_tools/issues
    Documentation = https://github.com/stefsmeets/topas_tools
url = https://github.com/stefsmeets/topas_tools
version = 1.0.0


[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas
    scipy


[options.extras_require]
build =
    twine
    wheel
    build


[options.entry_points]
console_scripts =
  fh2topas = topas_tools.fh2topas:main
  topasrestraints = topas_tools.topas_restraints:main
  topas_ndxan = topas_tools.topas_ndxan:main
  restraints_statistics = topas_tools.restraints_statistics:main
  cif2patterson = topas_tools.__main__:cif2patterson
  cif2topas = topas_tools.__main__:cif2topas
  expandcell = topas_tools.__main__:expandcell
  stripcif = topas_tools.__main__:stripcif
  topasdiff = topas_tools.__main__:topasdiff
  make_superflip = topas_tools.__main__:make_superflip

[flake8]
exclude = scripts
max-line-length = 96